--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "mongoose": "^8.1.0",
-    "pokemontcgsdk": "^2.0.0"
+    "pokemontcgsdk": "^2.0.0",
+    "puppeteer": "^21.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
